--- a/Ensemble_Learing_task04.ipynb
+++ b/Ensemble_Learing_task04.ipynb
@@ -764,9 +764,163 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "considered-scenario",
+   "metadata": {},
+   "source": [
+    "(5) 对模型超参数进行调优(调参)：                             \n",
+    "在刚刚的讨论中，我们似乎对模型的优化都是对模型算法本身的改进，比如：岭回归对线性回归的优化在于在线性回归的损失函数中加入L2正则化项从而牺牲无偏性降低方差。但是，大家是否想过这样的问题：在L2正则化中参数$\\lambda$应该选择多少？是0.01、0.1、还是1？到目前为止，我们只能凭经验或者瞎猜，能不能找到一种方法找到最优的参数$\\lambda$？事实上，找到最佳参数的问题本质上属于最优化的内容，因为从一个参数集合中找到最佳的值本身就是最优化的任务之一，我们脑海中浮现出来的算法无非就是：梯度下降法、牛顿法等无约束优化算法或者约束优化算法，但是在具体验证这个想法是否可行之前，我们必须先认识两个最本质概念的区别。                                     \n",
+    "   - 参数与超参数：                            \n",
+    "   我们很自然的问题就是岭回归中的参数$\\lambda$和参数w之间有什么不一样？事实上，参数w是我们通过设定某一个具体的$\\lambda$后使用类似于最小二乘法、梯度下降法等方式优化出来的，我们总是设定了$\\lambda$是多少后才优化出来的参数w。因此，类似于参数w一样，使用最小二乘法或者梯度下降法等最优化算法优化出来的数我们称为参数，类似于$\\lambda$一样，我们无法使用最小二乘法或者梯度下降法等最优化算法优化出来的数我们称为超参数。                                       \n",
+    "   模型参数是模型内部的配置变量，其值可以根据数据进行估计。                       \n",
+    "      - 进行预测时需要参数。                     \n",
+    "      - 它参数定义了可使用的模型。                        \n",
+    "      - 参数是从数据估计或获悉的。                       \n",
+    "      - 参数通常不由编程者手动设置。                     \n",
+    "      - 参数通常被保存为学习模型的一部分。                      \n",
+    "      - 参数是机器学习算法的关键，它们通常由过去的训练数据中总结得出 。                          \n",
+    "   模型超参数是模型外部的配置，其值无法从数据中估计。\n",
+    "      - 超参数通常用于帮助估计模型参数。\n",
+    "      - 超参数通常由人工指定。\n",
+    "      - 超参数通常可以使用启发式设置。\n",
+    "      - 超参数经常被调整为给定的预测建模问题。                            \n",
+    "   我们前面(4)部分的优化都是基于模型本身的具体形式的优化，那本次(5)调整的内容是超参数，也就是取不同的超参数的值对于模型的性能有不同的影响。                             \n",
+    "   - 网格搜索GridSearchCV()：                \n",
+    "   网格搜索：https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html?highlight=gridsearchcv#sklearn.model_selection.GridSearchCV                         \n",
+    "   网格搜索结合管道：https://scikit-learn.org/stable/auto_examples/compose/plot_compare_reduction.html?highlight=gridsearchcv                              \n",
+    "   网格搜索的思想非常简单，比如你有2个超参数需要去选择，那你就把所有的超参数选择列出来分别做排列组合。举个例子：$\\lambda = 0.01,0.1,1.0$和$\\alpha = 0.01,0.1,1.0$,你可以做一个排列组合，即：{[0.01,0.01],[0.01,0.1],[0.01,1],[0.1,0.01],[0.1,0.1],[0.1,1.0],[1,0.01],[1,0.1],[1,1]}  ，然后针对每组超参数分别建立一个模型，然后选择测试误差最小的那组超参数。换句话说，我们需要从超参数空间中寻找最优的超参数，很像一个网格中找到一个最优的节点，因此叫网格搜索。                         \n",
+    "   - 随机搜索 RandomizedSearchCV() ：               \n",
+    "   https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.RandomizedSearchCV.html?highlight=randomizedsearchcv#sklearn.model_selection.RandomizedSearchCV                           \n",
+    "   网格搜索相当于暴力地从参数空间中每个都尝试一遍，然后选择最优的那组参数，这样的方法显然是不够高效的，因为随着参数类别个数的增加，需要尝试的次数呈指数级增长。有没有一种更加高效的调优方式呢？那就是使用随机搜索的方式，这种方式不仅仅高校，而且实验证明，随机搜索法结果比稀疏化网格法稍好(有时候也会极差，需要权衡)。参数的随机搜索中的每个参数都是从可能的参数值的分布中采样的。与网格搜索相比，这有两个主要优点：        \n",
+    "      - 可以独立于参数数量和可能的值来选择计算成本。                 \n",
+    "      - 添加不影响性能的参数不会降低效率。            \n",
+    "下面我们使用SVR的例子，结合管道来进行调优："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "visible-flexibility",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CV accuracy: 0.187 +/- 0.649\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 我们先来对未调参的SVR进行评价： \n",
+    "from sklearn.svm import SVR     # 引入SVR类\n",
+    "from sklearn.pipeline import make_pipeline   # 引入管道简化学习流程\n",
+    "from sklearn.preprocessing import StandardScaler # 由于SVR基于距离计算，引入对数据进行标准化的类\n",
+    "from sklearn.model_selection import GridSearchCV  # 引入网格搜索调优\n",
+    "from sklearn.model_selection import cross_val_score # 引入K折交叉验证\n",
+    "from sklearn import datasets\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "boston = datasets.load_boston()     # 返回一个类似于字典的类\n",
+    "X = boston.data\n",
+    "y = boston.target\n",
+    "features = boston.feature_names\n",
+    "pipe_SVR = make_pipeline(StandardScaler(), SVR())\n",
+    "score1 = cross_val_score(estimator=pipe_SVR, X = X, y = y, scoring = 'r2', cv = 10)       # 10折交叉验证\n",
+    "print(\"CV accuracy: %.3f +/- %.3f\" % ((np.mean(score1)), np.std(score1)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "wrong-balloon",
+   "metadata": {},
+   "source": [
+    "GridSearchCV的sklearn官方网址：\n",
+    "\n",
+    "http://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html#sklearn.model_selection.GridSearchCV\n",
+    "\n",
+    "GridSearchCV，它存在的意义就是自动调参，只要把参数输进去，就能给出最优化的结果和参数。但是这个方法适合于小数据集，一旦数据的量级上去了，很难得出结果。这个时候就是需要动脑筋了。数据量比较大的时候可以使用一个快速调优的方法——坐标下降。它其实是一种贪心算法：拿当前对模型影响最大的参数调优，直到最优化；再拿下一个影响最大的参数调优，如此下去，直到所有的参数调整完毕。这个方法的缺点就是可能会调到局部最优而不是全局最优，但是省时间省力，巨大的优势面前，还是试一试吧，后续可以再拿bagging再优化。\n",
+    "\n",
+    "通常算法不够好，需要调试参数时必不可少。比如SVM的惩罚因子C，核函数kernel，gamma参数等，对于不同的数据使用不同的参数，结果效果可能差1-5个点，sklearn为我们提供专门调试参数的函数grid_search。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "pharmaceutical-surveillance",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "网格搜索最优得分： 0.6081303070817237\n",
+      "网格搜索最优参数组合：\n",
+      " {'svr__C': 1000.0, 'svr__gamma': 0.001, 'svr__kernel': 'rbf'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 下面我们使用网格搜索来对SVR调参：\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "pipe_svr = Pipeline([(\"StandardScaler\",StandardScaler()),(\"svr\",SVR())])\n",
+    "param_range = [0.0001,0.001,0.01,0.1,1.0,10.0,100.0,1000.0]\n",
+    " # 注意__是指两个下划线，一个下划线会报错的\n",
+    "\n",
+    "param_grid = [{\"svr__C\":param_range,\"svr__kernel\":[\"linear\"]}, {\"svr__C\":param_range,\"svr__gamma\":param_range,\"svr__kernel\":[\"rbf\"]}]\n",
+    "\n",
+    "# param_grid={'kernel':['linear','rbf'],'C':[0.001,0.01,0.1,1,10,100,1000],\n",
+    "#             'gamma':[0.001,0.01,0.1,1,10,100,1000]}\n",
+    "gs = GridSearchCV(estimator=pipe_svr, param_grid = param_grid, scoring = 'r2', cv = 10)       # 10折交叉验证\n",
+    "gs = gs.fit(X,y)\n",
+    "print(\"网格搜索最优得分：\", gs.best_score_)\n",
+    "print(\"网格搜索最优参数组合：\\n\", gs.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "vulnerable-scott",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "随机搜索最优得分： 0.302402169705699\n",
+      "随机搜索最优参数组合：\n",
+      " {'svr__C': 1.2433913013577484, 'svr__gamma': 1.1173508136621315, 'svr__kernel': 'linear'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 下面我们使用随机搜索来对SVR调参：\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from scipy.stats import uniform  # 引入均匀分布设置参数\n",
+    "pipe_svr = Pipeline([(\"StandardScaler\",StandardScaler()), (\"svr\",SVR())])\n",
+    "distributions = dict(svr__C=uniform(loc=1.0, scale=4),    # 构建连续参数的分布\n",
+    "                     svr__kernel=[\"linear\",\"rbf\"],                                   # 离散参数的集合\n",
+    "                    svr__gamma=uniform(loc=0, scale=4))\n",
+    "\n",
+    "rs = RandomizedSearchCV(estimator=pipe_svr, param_distributions = distributions, scoring = 'r2', cv = 10)# 10折交叉验证\n",
+    "rs = rs.fit(X,y)\n",
+    "print(\"随机搜索最优得分：\",rs.best_score_)\n",
+    "print(\"随机搜索最优参数组合：\\n\",rs.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "faced-norwegian",
+   "metadata": {},
+   "source": [
+    "经过我们不懈的努力，从收集数据集并选择合适的特征、选择度量模型性能的指标、选择具体的模型并进行训练以优化模型到评估模型的性能并调参，我们认识到了如何使用sklearn构建简单回归模型。在本章的最后，我们会给出一个具体的案例，整合回归的内容。下面我们来看看机器学习另外一类大问题：分类。与回归一样，分类问题在机器学习的地位非常重要，甚至有的地方用的比回归问题还要多，因此分类问题是十分重要的！\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "suburban-savannah",
+   "id": "fancy-tuner",
    "metadata": {},
    "outputs": [],
    "source": []
