--- a/heartbeat_adjust_param.ipynb
+++ b/heartbeat_adjust_param.ipynb
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "aging-component",
    "metadata": {},
    "outputs": [],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "lesser-husband",
    "metadata": {},
    "outputs": [],
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "female-extent",
    "metadata": {},
    "outputs": [
@@ -618,7 +618,7 @@
        "[10 rows x 207 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,8 +638,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "absolute-durham",
+   "execution_count": 6,
+   "id": "settled-benefit",
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +981,7 @@
        "[10 rows x 207 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "attached-congo",
    "metadata": {},
    "outputs": [],
@@ -1232,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "royal-admission",
+   "id": "subject-party",
    "metadata": {},
    "outputs": [
     {
@@ -9905,7 +9905,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "mechanical-welding",
+   "id": "pharmaceutical-bobby",
    "metadata": {},
    "outputs": [
     {
@@ -9923,7 +9923,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "compound-asthma",
+   "id": "pointed-israeli",
    "metadata": {},
    "outputs": [
     {
@@ -9969,7 +9969,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "nuclear-medium",
+   "id": "descending-contribution",
    "metadata": {},
    "outputs": [
     {
@@ -10464,7 +10464,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "flying-harbor",
+   "id": "romantic-breakfast",
    "metadata": {},
    "outputs": [
     {
@@ -14487,7 +14487,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
+   "id": "musical-sussex",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "amateur-community",
    "metadata": {},
    "outputs": [
@@ -14530,9 +14538,18 @@
       "cv_scores: [0.9615056903324599, 0.9597829114711733, 0.9644760387635415, 0.9622009947666585, 0.9607941521618003]\n",
       "lgb_scotrainre_list:[0.9615056903324599, 0.9597829114711733, 0.9644760387635415, 0.9622009947666585, 0.9607941521618003]\n",
       "lgb_score_mean:0.9617519574991267\n",
-      "lgb_score_std:0.0015797109890455313\n",
-      "model <lightgbm.basic.Booster object at 0x7f20cb4dbe50>\n"
+      "lgb_score_std:0.0015797109890455313\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Booster.eval of <lightgbm.basic.Booster object at 0x7fbed382aac0>>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -14575,7 +14592,57 @@
     "print(\"lgb_scotrainre_list:{}\".format(cv_scores))\n",
     "print(\"lgb_score_mean:{}\".format(np.mean(cv_scores)))\n",
     "print(\"lgb_score_std:{}\".format(np.std(cv_scores)))\n",
-    "# print(\"model\", model)"
+    "# print(\"model\", model)\n",
+    "model.eval\n",
+    "# model.summry()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "expected-carter",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<lightgbm.basic.Booster at 0x7fbed382aac0>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.best_score\n",
+    "model.network\n",
+    "model.num_trees\n",
+    "model.save_model(\"./model.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "scientific-terrain",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model.best_score: defaultdict(<class 'collections.OrderedDict'>, {'valid_0': OrderedDict([('multi_logloss', 0.04459744902052496), ('f1_score', 0.9607941521618003)])})\n",
+      "model.network: False\n",
+      "model.num_trees: <bound method Booster.num_trees of <lightgbm.basic.Booster object at 0x7fbed382aac0>>\n",
+      "model <lightgbm.basic.Booster object at 0x7fbed382aac0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"model.best_score:\", model.best_score)\n",
+    "print(\"model.network:\", model.network)\n",
+    "print(\"model.num_trees:\", model.num_trees)\n",
+    "print(\"model\", model)"
    ]
   },
   {
